lib/tests/fixtures/compiler/parser/bad_define_type_name.baseline
Error: bad_define_type_name.pp:1:8: '::foo' is not a valid name for a defined type.
  define ::foo
         ^~~~~
